tests/snapshots/run_wpt_conformance__onnx_reduceMax_float16_3D_tensor_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_max.https.any.js",
    "reduceMax float16 3D tensor options.keepDimensions=false",
    "onnx",
    "PASS",
)
